[package]
name = "drp"
version = "0.1.0"
authors = ["Lily Houghton <lily.anachrome@gmail.com>", "AJ Trainor <lhk@lhk.me>"]
build = "build.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "we"
path = "src/we.rs"

[build-dependencies]
capnpc = "*"

[dependencies]
ncurses = "*"
mio = "*"
bytes = "*"
nix = "*"
capnp = "*"
capnp-nonblock = "*"
