[package]
name = "drp"
version = "0.1.0"
authors = ["Lily Houghton <lily.anachrome@gmail.com>", "AJ Trainor <lhk@lhk.me>"]
build = "build.rs"

[[bin]]
name = "drpd"
path = "src/server.rs"

[[bin]]
name = "drpc"
path = "src/client.rs"

[[bin]]
name = "keygen"
path = "src/keygen.rs"

[build-dependencies]
capnpc = "*"

[dependencies]
ncurses = "*"
mio = "*"
bytes = "*"
nix = "*"
capnp = "*"
capnp-nonblock = "*"
libc = "*"
sodiumoxide = "*"
rustc-serialize = "*"
